# fprod-stm-bank

./: .gitignore  README.md
Backend/: stmBank.cabal
Backend/app/: Main.hs
Backend/lib/: StmBank.hs
Backend/lib/StmBank/: Cors.hs  Util.hs
Backend/static/: index.html
Backend/test/: StmBankTest.hs
Frontend/: elm.json  package.json  webpack.config.js
Frontend/src/: Main.elm  index.html  index.js  styles.css
